src/main/java/com/github/cross_language_cpp/djinni_intellij_plugin/yaml.bnf
/*
 * Copyright 2015 Dropbox, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
{
  parserClass="com.github.cross_language_cpp.djinni_intellij_plugin.parser.YamlParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Yaml"
  psiImplClassSuffix="Impl"
  psiPackage="com.github.cross_language_cpp.djinni_intellij_plugin.psi"
  psiImplPackage="com.github.cross_language_cpp.djinni_intellij_plugin.psi.impl"

  elementTypeHolderClass="com.github.cross_language_cpp.djinni_intellij_plugin.psi.YamlTypes"
  elementTypeClass="com.github.cross_language_cpp.djinni_intellij_plugin.psi.YamlElementType"
  tokenTypeClass="com.github.cross_language_cpp.djinni_intellij_plugin.psi.YamlTokenType"
  psiImplUtilClass="com.github.cross_language_cpp.djinni_intellij_plugin.psi.impl.YamlPsiImplUtil"

  generateTokenAccessors=true
}

simpleFile ::= item_*

private item_ ::= (entry|COMMENT|CRLF)

entry ::= (lhs? SEPARATOR rhs?) | lhs

lhs ::= KEY

rhs ::= VALUE {
  methods=[getName getPresentation]
}
